--- a/src/app-info.json
+++ b/src/app-info.json
@@ -1,11 +1,11 @@
 {
-  "appVersionHash": "imagecollection-tilda-project-2024-10 v.0.0.1 / 2024.10.23 17:00 +0300",
+  "appVersionHash": "imagecollection-tilda-project-2024-10 v.0.0.2 / 2024.10.24 22:24 +0300",
   "projectName": "imagecollection-tilda-project-2024-10",
-  "timestamp": "2024.10.23 17:00 +0300",
-  "timetag": "241023-1700",
-  "version": "0.0.1",
-  "currentTimeStr": "2024.10.23 17:00 +0300",
-  "currentTimeTag": "241023-1700",
-  "gitCommitHash": "7d286c6",
-  "gitBranch": "main"
+  "timestamp": "2024.10.24 22:24 +0300",
+  "timetag": "241024-2224",
+  "version": "0.0.2",
+  "currentTimeStr": "2024.10.24 22:24 +0300",
+  "currentTimeTag": "241024-2224",
+  "gitCommitHash": "311cc3e",
+  "gitBranch": "5-features-gallery"
 }
