--- a/src/app-info.json
+++ b/src/app-info.json
@@ -1,11 +1,11 @@
 {
-  "appVersionHash": "imagecollection-tilda-project-2024-10 v.0.0.4 / 2024.10.26 01:14 +0300",
+  "appVersionHash": "imagecollection-tilda-project-2024-10 v.0.0.5 / 2024.10.28 13:12 +0300",
   "projectName": "imagecollection-tilda-project-2024-10",
-  "timestamp": "2024.10.26 01:14 +0300",
-  "timetag": "241026-0114",
-  "version": "0.0.4",
-  "currentTimeStr": "2024.10.26 01:14 +0300",
-  "currentTimeTag": "241026-0114",
-  "gitCommitHash": "12a7042",
-  "gitBranch": "5-features-gallery"
+  "timestamp": "2024.10.28 13:12 +0300",
+  "timetag": "241028-1312",
+  "version": "0.0.5",
+  "currentTimeStr": "2024.10.28 13:12 +0300",
+  "currentTimeTag": "241028-1312",
+  "gitCommitHash": "b9681ac",
+  "gitBranch": "7-contact-form"
 }
