--- a/app-info.json
+++ b/app-info.json
@@ -1,11 +1,11 @@
 {
-  "appVersionHash": "imagecollection-tilda-project-2024-10 v.0.0.3 / 2024.10.25 23:27 +0300",
+  "appVersionHash": "imagecollection-tilda-project-2024-10 v.0.0.5 / 2024.10.28 13:49 +0300",
   "projectName": "imagecollection-tilda-project-2024-10",
-  "timestamp": "2024.10.25 23:27 +0300",
-  "timetag": "241025-2327",
-  "version": "0.0.3",
-  "currentTimeStr": "2024.10.25 23:27 +0300",
-  "currentTimeTag": "241025-2327",
-  "gitCommitHash": "f696f31",
-  "gitBranch": "5-features-gallery"
+  "timestamp": "2024.10.28 13:49 +0300",
+  "timetag": "241028-1349",
+  "version": "0.0.5",
+  "currentTimeStr": "2024.10.28 13:49 +0300",
+  "currentTimeTag": "241028-1349",
+  "gitCommitHash": "1d3b941",
+  "gitBranch": "7-contact-form"
 }
